# salaries-and-promotions

./: .gitignore  README.md  pyproject.toml  run.py
Salaries and promotions/: main.py
salaries_and_promotions/: main.py
salaries_and_promotions/auth/: jwt_auth.py  token_info.py  utils.py
salaries_and_promotions/core/: config.py
salaries_and_promotions/users/: schemas.py  users_db.py
